--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^5.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.8.1",
     "morgan": "^1.10.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
