--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter project for DV1677 JSRamverk",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^5.0.0",
     "method-override": "^3.0.0",
+    "mocha": "^10.7.3",
     "mongodb": "^6.8.1",
     "morgan": "^1.10.0",
     "sqlite": "^5.1.1",
