--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Starter project for DV1677 JSRamverk",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha"
+    "test": "nyc --reporter=html --reporter=text mocha",
+    "eslint": "eslint .",
+    "eslint-fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,12 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.10.0",
+    "eslint": "^9.10.0",
+    "eslint-plugin-react": "^7.36.0",
+    "globals": "^15.9.0",
+    "javascript-style-guide": "^1.0.1",
     "nyc": "^17.0.0"
   }
 }
