--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
+        mongodb-version: ['4.4', '5.x', '6.x']
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
