--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,5 +35,8 @@ jobs:
 
         
     - run: npm ci
+      working-directory: backend
     - run: npm run build --if-present
+      working-directory: backend
     - run: npm run test
+      working-directory: backend
