--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,9 @@ jobs:
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
 
+    - name: Install mongosh
+      run: npm install -g mongosh
+      working-directory: backend
         
     - run: npm ci
       working-directory: backend
