--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Install mongosh
       run: npm install -g mongosh
       working-directory: backend
+    - name: Install other dependencies
+      run: npm install
+      working-directory: backend
         
     - run: npm ci
       working-directory: backend
