--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "buildtests": "cd testdb && mongosh int-testdocs --eval 'db.dropDatabase()' &&  mongoimport --db int-testdocs -c int-testcollection --jsonArray testdb.json"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
