--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,10 @@
   "name": "ssr-editor",
   "version": "1.0.0",
   "description": "Starter project for DV1677 JSRamverk",
-  "main": "index.js",
+  "main": "app.mjs",
+  "type": "module",
   "scripts": {
+    "start": "node app.mjs",
     "test": "export NODE_ENV=test && cross-env NODE_OPTIONS='--experimental-loader @istanbuljs/esm-loader-hook' nyc --reporter=html --reporter=text --reporter=clover mocha --exit --timeout 10000",
     "eslint": "eslint .",
     "eslint-fix": "eslint . --fix",
@@ -22,8 +24,9 @@
     "express": "^5.0.0",
     "method-override": "^3.0.0",
     "mocha": "^10.7.3",
-    "mongodb": "^6.8.1",
+    "mongodb": "^6.9.0",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
