--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -8,17 +8,20 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest",
+    "test": "npm run buildtests && jest --runInBand",
+    "buildtests": "cd testdb && mongosh int-testdocs --eval 'db.dropDatabase()' &&  mongoimport --db testdocs -c int-testcollection --jsonArray testdb.json"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "user-event": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
