--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,3 +46,5 @@ jobs:
       working-directory: backend
     - run: npm run test
       working-directory: backend
+    - run: npm run test
+      working-directory: frontend
