--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,4 +47,4 @@ jobs:
     - run: npm run test
       working-directory: backend
     - run: npm run test
-      working-directory: frontend
+      working-directory: frontend/jsramverk-frontend
