--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,9 +47,9 @@ jobs:
       working-directory: backend
     - run: npm install
       working-directory: frontend/jsramverk-frontend
-    - run:  NODE_ENV=integration-test node app.mjs
+    - run:  nohup NODE_ENV=integration-test node app.mjs &
       working-directory: backend
     - run: npm run test
       working-directory: frontend/jsramverk-frontend
-    - run: ^C
+    - run: pkill -f "node app.mjs"
       working-directory: backend
