--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,7 +47,7 @@ jobs:
       working-directory: backend
     - run: npm install
       working-directory: frontend/jsramverk-frontend
-    - run:  nohup NODE_ENV=integration-test node app.mjs &
+    - run:  NODE_ENV=integration-test nohup node app.mjs &
       working-directory: backend
     - run: npm run test
       working-directory: frontend/jsramverk-frontend
