--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "deploy": "npm run build && rsync -av --delete build/ siln20@ssh.student.bth.se:www/editor",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "NODE_ENV=integration-test npm run buildtests && jest --runInBand",
