--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "deploy": "npm run build && rsync -av --delete build/ siln20@ssh.student.bth.se:www/editor",
+    "deploy": "npm run build && rsync -av --delete build/ viav23@ssh.student.bth.se:www/editor",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "NODE_ENV=integration-test npm run buildtests && jest --runInBand",
