--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^6.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "socket.io": "^4.8.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
@@ -40,5 +41,9 @@
     "globals": "^15.9.0",
     "javascript-style-guide": "^1.0.1",
     "nyc": "^17.1.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^6.0.4"
   }
 }
