--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": ".",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=dev vite",
     "build": "tsc -b && vite build",
     "deploy": "npm run build && rsync -av --delete build/ viav23@ssh.student.bth.se:www/editor",
     "lint": "eslint .",
@@ -23,6 +23,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.0",
     "user-event": "^4.0.0"
   },
   "devDependencies": {
