--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
