--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "jest-environment-jsdom": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.0",
