--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "@istanbuljs/esm-loader-hook": "^0.2.0",
+    "bcryptjs": "^2.4.3",
     "chai": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mocha": "^10.7.3",
     "mongodb": "^6.9.0",
