--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@istanbuljs/esm-loader-hook": "^0.2.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chai": "^5.1.1",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.10.0",
+    "@types/bcryptjs": "^2.4.6",
     "babel-plugin-istanbul": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.10.0",
