--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.10.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "babel-plugin-istanbul": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.10.0",
