--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -24,9 +24,9 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "reactjs-popup": "^2.0.6",
-    "slate-react": "^0.110.2",
     "socket.io-client": "^4.8.0",
     "user-event": "^4.0.0"
   },
@@ -36,6 +36,7 @@
     "@testing-library/react": "^16.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.13",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/testing-library__react": "^10.2.0",
