--- a/backend/.nycrc
+++ b/backend/.nycrc
@@ -2,6 +2,7 @@
   "exclude": [
     "**/dbenvs.mjs",
     "**/test_docs.mjs",
-    "**/test_login.mjs"
+    "**/test_login.mjs",
+    "**/test_api.mjs",
   ]
 }
