--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "sinon": "^19.0.2",
     "socket.io": "^4.8.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
