--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": ".",
   "scripts": {
-    "dev": "NODE_ENV=dev vite",
+    "dev": " MAILGUN_API_KEY=784975b6-b8b61364 NODE_ENV=dev vite",
     "build": "tsc -b && vite build",
     "deploy": "npm run build && rsync -av --delete build/ viav23@ssh.student.bth.se:www/editor",
     "lint": "eslint .",
@@ -18,9 +18,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sendgrid/mail": "^8.1.4",
     "@testing-library/user-event": "^14.5.2",
+    "@types/mailgun-js": "^0.22.18",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cloudmailin": "^0.1.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^10.2.3",
