--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": ".",
   "scripts": {
-    "dev": " MAILGUN_API_KEY=784975b6-b8b61364 NODE_ENV=dev vite",
+    "dev": "NODE_ENV=dev vite",
     "build": "tsc -b && vite build",
     "deploy": "npm run build && rsync -av --delete build/ viav23@ssh.student.bth.se:www/editor",
     "lint": "eslint .",
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cloudmailin": "^0.1.0",
+    "dotenv": "^16.4.5",
     "jest-environment-jsdom": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^10.2.3",
