--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "export NODE_ENV=test && cross-env NODE_OPTIONS='--experimental-loader @istanbuljs/esm-loader-hook' nyc --reporter=html --reporter=text --reporter=clover --no-compact mocha --exit --timeout 10000",
     "eslint": "eslint .",
     "eslint-fix": "eslint . --fix",
+    "local-db": "export NODE_ENV=test && node app.mjs",
     "pretest": "npm run buildtests",
     "resetuserdb": "cd db && mongosh testdocs --eval 'db.users.deleteMany({})'",
     "buildtests": "cd db && mongosh testdocs --eval 'db.dropDatabase()' && npm run resetuserdb && mongoimport --db testdocs -c testcollection --jsonArray testdb.json"
@@ -26,6 +27,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^5.0.0",
+    "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mocha": "^10.7.3",
