--- a/frontend/jsramverk-frontend/package.json
+++ b/frontend/jsramverk-frontend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NODE_ENV=dev vite",
     "build": "tsc -b && vite build",
-    "deploy": "npm run build && rsync -av --delete build/ viav23@ssh.student.bth.se:www/editor",
+    "deploy": "npm run build && rsync -av --delete dist/ viav23@ssh.student.bth.se:www/editor",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "NODE_ENV=integration-test npm run buildtests && jest --runInBand",
