--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,3 +53,4 @@ jobs:
       working-directory: frontend/jsramverk-frontend
     - run: pkill -f "node app.mjs"
       working-directory: backend
+    - run: npm run test
