--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,7 +47,9 @@ jobs:
       working-directory: backend
     - run: npm install
       working-directory: frontend/jsramverk-frontend
-    - run:  NODE_ENV=integration-test nohup node app.mjs &
+    - run:  NODE_ENV=integration-test nohup node app.mjs
+      env:
+         JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
       working-directory: backend
     - run: NODE_ENV=integration-test npm run test
       working-directory: frontend/jsramverk-frontend
