--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,22 +46,14 @@ jobs:
     - run: npm run test
       working-directory: backend
     - run: npm install
-      # Start backend in the background and capture the process ID (PID)
-    - name: Start Backend in Background
-      run: |
+    -  run: |
         NODE_ENV=integration-test nohup node app.mjs &
         echo $! > backend_pid.txt
-      env:
-         JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
-      working-directory: backend
-
-    # Run frontend tests
-    - name: Run Frontend Tests
-      run: NODE_ENV=integration-test npm run test
+        env:
+          JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
+        working-directory: backend
+    - run: NODE_ENV=integration-test npm run test
       working-directory: frontend/jsramverk-frontend
-
-    # Kill the backend process after tests
-    - name: Stop Backend
-      run: |
+    - run: |
         kill $(cat backend_pid.txt)
-      working-directory: backend
+        working-directory: backend
