--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,6 +43,8 @@ jobs:
       working-directory: backend
     - run: npm run build --if-present
       working-directory: backend
+    - run: npm install
+      working-directory: backend
     - run: npm run test
       working-directory: backend
     -  run: |
